--- a/temperature-converter/src/components/currencyConverter.css
+++ b/temperature-converter/src/components/currencyConverter.css
@@ -6,18 +6,6 @@
     text-align: center;
   }
   
-  .light {
-    background: #ffffff;
-    color: #333;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .dark {
-    background: #333;
-    color: white;
-    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
-  }
-  
   select, input {
     margin: 10px;
     padding: 8px;
@@ -29,7 +17,7 @@
   button {
     padding: 10px 20px;
     margin-top: 10px;
-    background-color: #007bff;
+    background-color: #fc8232;
     color: white;
     border: none;
     border-radius: 5px;
@@ -38,6 +26,6 @@
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #e75b23;
   }
   
